--- a/index.html
+++ b/index.html
@@ -2,22 +2,24 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Nina CARDUCCI Photographe</title>
+	<meta name="description" content="Photographe professionnelle pour toutes vos occasions: mariage, évènements d'entreprise, portrait ...et incluant d'autres prestations comme la retouche photo, la création d'album personnalisé, le shooting..">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/maugallery.js"></script>
-	<script src="./assets/scripts.js"></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" defer integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="./assets/maugallery.js" defer></script>
+	<script src="./assets/scripts.js" defer></script>
 	<script type="application/ld+json">
     {
         "@context": "https://schema.org/",
         "@type": "LocalBusiness",
         "name": "NINA-CARDUCCI PHOTOGRAPHE",
-        "description": "Photographe pour toutes les occasions de la vie, shooting photos, retouches photos ou création d'album photos",
+        "description": "Photographe pour toutes les occasions de la vie: mariage, entreprise, concert... shooting photos, retouches photos, création d'album",
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "68 avenue Alsace-Lorraine",
@@ -27,22 +29,22 @@
         },
         "telephone": "05 56 67 78 89" 
     }
-</script>
+	</script>
 </head>
 <body>
-<div class="top-header">
-	<h3 class="name">Nina Carducci</h3>
+	<nav class="top-header">
+	<h1 class="name">Nina Carducci</h1>
 	<div class="nav">   
 		<ul>
 			<li><a href="#about">À propos</a></li>
 			<li><a href="#gallery">Galerie</a></li>
 			<li><a href="#services">Service</a></li>
 			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt=""></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="logo instagram"></a></li>
 		</ul>
 	</div>
-</div>
-<div id="header">
+	</nav>
+	<header id="header">
 
 	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-indicators">
@@ -52,13 +54,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/compressed_ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="...">
+				<img src="./assets/images/slider/compressed_ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme d'affaire marchant sur un sol rayé blanc et noir">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/compressed_nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="...">
+				<img src="./assets/images/slider/compressed_nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Foule de jeunes gens en délire">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/compressed_edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="...">
+				<img src="./assets/images/slider/compressed_edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Danse d'ouverture de bal d'un mariage où les mariés s'enlassent">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -70,44 +72,45 @@
 			<span class="visually-hidden">Next</span>
 		</button>
 	</div>
-</div>
-<div id="about">
+	</header>
+	<main>
+		<div id="about">
 	<div class="picture left">
-		<img src="./assets/images/compressed_nina.webp">
+		<img src="./assets/images/compressed_nina.webp" alt="Portrait de la photographe Nina Carducci">
 	</div>
 	<div id="about-me">
-		<h3 class="about-me__title">A propos de moi</h3>
-		<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
+		<h2 class="about-me__title">A propos de moi</h2>
+		<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
 		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 	</div>
-</div>
-<div id="gallery">
-	<h3 class="title">Portfolio</h3>
+		</div>
+		<div id="gallery">
+	<h2 class="title">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/compressed_aaron-paul-wnX-fXzB6Cw-unsplash.webp"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_ali-morshedlou-WMD64tMfc4k-unsplash.webp"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_jason-goodman-tHO1_OuKbg0-unsplash.webp"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/compressed_hannah-busing-RvF2R_qMpRk-unsplash.webp"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/compressed_ade-tunji-rVkhWWZFAtQ-unsplash.webp"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/compressed_jakob-owens-SiniLJkXhMc-unsplash.webp"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/compressed_nino-van-prattenburg--443cl1uR_8-unsplash.webp"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/compressed_austin-neill-hgO1wFPXl3I-unsplash.webp"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/compressed_aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Public enjoué lors d'un concert aux couleurs flamboyantes"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portait d'un jeune homme habillé d'un costume noir avec cravate rouge qui pose debout"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Deux jeunes femmes souriantes de profil assises à leur bureau"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/compressed_hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Gros plan sur 4 mains qui s'approchent pour se donner la main"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/compressed_ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait d'un trentenaire de couleur noire vêtu d'un t-shirt et colliers argentés fermant les yeux"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/compressed_jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Couple de jeunes mariés souriant avec un immense palmier en arrère-plan"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/compressed_nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait d'une jeune femme de couleur blanche fermant les yeux posant devant un grillage"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/compressed_austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Chanteur sur scène avec de la fumée en arrière-plan de couleur bleue, blanche et rouge"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Jeune femme de couleur blanche assise devant son ordinateur et regardant à sa gauche de façon hilare  "/>
 		</div>
 	</div>
 	<div class="quote">
 		<figure>
 			<blockquote>
-				<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h1>
+				<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</p>
 			</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
 	</div>
-</div>
-<div id="services">
-	<h3 class="title">Mes services</h3>
+		</div>
+		<div id="services">
+	<h2 class="title">Mes services</h2>
 	<div class="container">
 		<div class="service">
 			<div class="service__description">
@@ -141,19 +144,20 @@
 			</div>
 		</div>
 	</div>
-</div>
-<div class="quote">
+		</div>
+		<div class="quote">
 	<figure>
 		<blockquote>
-			<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
+			<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
 		</blockquote>
 		<figcaption class="quote__author">- Richard Avedon</figcaption>
 	</figure>
-</div>
-<div id="contact">
+		</div>
+	</main>
+	<footer id="contact">
 	<div class="container">
 		<div class="form-container">
-			<h3>Une question ? Une demande de devis ?</h3>
+			<h2>Une question ? Une demande de devis ?</h2>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 			<form action="" method="post">
 				<label>Nom</label>
@@ -166,9 +170,9 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/compressed_camera.webp">
+			<img src="./assets/images/compressed_camera.webp" alt="Appareil photo prise avec une lumière sombre orangée">
 		</div>
 	</div>
-</div>
+	</footer>
 </body>
 </html>
