mise en place du referencement local

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina CARDUCCI Photographe</title>
-	<meta name="description" content="Photographe professionnelle pour toutes vos occasions: mariage, évènements d'entreprise, portrait ...et incluant d'autres prestations comme la retouche photo, la création d'album personnalisé, le shooting..">
+	<meta name="description" content="Photographe professionnelle située à Bordeaux pour toutes vos occasions: mariage, évènements d'entreprise, portrait ...et incluant d'autres prestations comme la retouche photo, la création d'album personnalisé, le shooting..">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,16 +18,26 @@
     {
         "@context": "https://schema.org/",
         "@type": "LocalBusiness",
-        "name": "NINA-CARDUCCI PHOTOGRAPHE",
+		"name": "NINA-CARDUCCI PHOTOGRAPHE",
         "description": "Photographe pour toutes les occasions de la vie: mariage, entreprise, concert... shooting photos, retouches photos, création d'album",
-        "address": {
+        "image":["./assets/images/compressed_nina.webp"], 
+		"address": {
             "@type": "PostalAddress",
             "streetAddress": "68 avenue Alsace-Lorraine",
             "addressLocality": "Bordeaux",
             "postalCode": "33200",
             "addressCountry": "FR"
         },
-        "telephone": "05 56 67 78 89" 
+        "telephone": "05 56 67 78 89" ,
+		"priceRange":"€€",
+		"openingHoursSpecification":[
+			{
+				"@type": "OpeningHoursSpecification",
+    			"dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday"],
+    			"opens": "10:00",
+    			"closes": "19:00"
+			}
+		]
     }
 	</script>
 </head>
