--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina CARDUCCI Photographe</title>
 	<meta name="description" content="Photographe professionnelle située à Bordeaux pour toutes vos occasions: mariage, évènements d'entreprise, portrait ...et incluant d'autres prestations comme la retouche photo, la création d'album personnalisé, le shooting..">
+	<meta name="language" content="fr-FR">
+
+	<meta property="og:site_name" content="Nina CARDUCCI Photographe" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://nina-carducci.github.io/" />
+	<meta property="og:title" content="Nina CARDUCCI Photographe" />
+	<meta property="og:description" content="Photographe professionnelle située à Bordeaux pour toutes vos occasions: mariage, évènements d'entreprise, portrait ...et autres prestations: retouche photo, création d'album personnalisé, shooting" />
+	<meta property="og:image" content="./assets/images/ninaOG.webp" />
+
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:title" content="Nina CARDUCCI Photographe" />
+	<meta name="twitter:description" content="Photographe professionnelle située à Bordeaux pour toutes vos occasions: mariage, évènements d'entreprise, portrait ...et autres prestations: retouche photo, création d'album personnalisé, shooting" />
+	<meta name="twitter:image" content="./assets/images/ninaTC.webp" />
+	<meta name="twitter:url" content="https://nina-carducci.github.io/" />
+
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
