partie accessibilité: modification filtre color en noir, lang=fr et ajout de for pour balise label

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina CARDUCCI Photographe</title>
@@ -11,12 +11,12 @@
 	<meta property="og:url" content="https://nina-carducci.github.io/" />
 	<meta property="og:title" content="Nina CARDUCCI Photographe" />
 	<meta property="og:description" content="Photographe professionnelle située à Bordeaux pour toutes vos occasions: mariage, évènements d'entreprise, portrait ...et autres prestations: retouche photo, création d'album personnalisé, shooting" />
-	<meta property="og:image" content="./assets/images/ninaOG.webp" />
+	<meta property="og:image" content="./assets/images/compressed_imageOGTC.webp" />
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content="Nina CARDUCCI Photographe" />
 	<meta name="twitter:description" content="Photographe professionnelle située à Bordeaux pour toutes vos occasions: mariage, évènements d'entreprise, portrait ...et autres prestations: retouche photo, création d'album personnalisé, shooting" />
-	<meta name="twitter:image" content="./assets/images/ninaTC.webp" />
+	<meta name="twitter:image" content="./assets/images/compressed_imageOGTC.webp" />
 	<meta name="twitter:url" content="https://nina-carducci.github.io/" />
 
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
@@ -122,7 +122,7 @@
 			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/compressed_jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Couple de jeunes mariés souriant avec un immense palmier en arrère-plan"/>
 			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/compressed_nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait d'une jeune femme de couleur blanche fermant les yeux posant devant un grillage"/>
 			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/compressed_austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Chanteur sur scène avec de la fumée en arrière-plan de couleur bleue, blanche et rouge"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Jeune femme de couleur blanche assise devant son ordinateur et regardant à sa gauche de façon hilare  "/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Jeune femme de couleur blanche,hilare assise devant son ordinateur et regardant à sa gauche "/>
 		</div>
 	</div>
 	<div class="quote">
@@ -185,11 +185,11 @@
 			<h2>Une question ? Une demande de devis ?</h2>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 			<form action="" method="post">
-				<label>Nom</label>
+				<label for="nom">Nom</label>
 				<input type="text" name="nom" id="nom">
-				<label>Email</label>
+				<label for="email">Email</label>
 				<input type="email" name="email" id="email">
-				<label>Message</label>
+				<label for="message">Message</label>
 				<textarea name="message" id="message" cols="30" rows="10"></textarea>
 				<input type="submit" value="Envoyer"/>
 			</form>
