modification de la méta description , du title et ajout de mots-clés

--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="fr">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Nina CARDUCCI Photographe</title>
-	<meta name="description" content="Photographe professionnelle située à Bordeaux pour toutes vos occasions: mariage, évènements d'entreprise, portrait ...et incluant d'autres prestations comme la retouche photo, la création d'album personnalisé, le shooting..">
+	<title>Nina CARDUCCI | Photographe mariage et portrait en IDF</title>
+	<meta name="description" content="Photographe professionnelle à Bordeaux, vous propose mes services pour shooting (mariage, portrait...), création d'album personnalisé ou retouche photo.">
 	<meta name="language" content="fr-FR">
 
 	<meta property="og:site_name" content="Nina CARDUCCI Photographe" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://nina-carducci.github.io/" />
 	<meta property="og:title" content="Nina CARDUCCI Photographe" />
-	<meta property="og:description" content="Photographe professionnelle située à Bordeaux pour toutes vos occasions: mariage, évènements d'entreprise, portrait ...et autres prestations: retouche photo, création d'album personnalisé, shooting" />
+	<meta property="og:description" content="Photographe professionnelle à Bordeaux, vous propose mes services pour shooting (mariage, portrait...), création d'album personnalisé ou retouche photo." />
 	<meta property="og:image" content="./assets/images/compressed_imageOGTC.webp" />
 
 	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content="Nina CARDUCCI Photographe" />
-	<meta name="twitter:description" content="Photographe professionnelle située à Bordeaux pour toutes vos occasions: mariage, évènements d'entreprise, portrait ...et autres prestations: retouche photo, création d'album personnalisé, shooting" />
+	<meta name="twitter:description" content="Photographe professionnelle à Bordeaux, vous propose mes services pour shooting (mariage, portrait...), création d'album personnalisé ou retouche photo." />
 	<meta name="twitter:image" content="./assets/images/compressed_imageOGTC.webp" />
 	<meta name="twitter:url" content="https://nina-carducci.github.io/" />
 
@@ -107,7 +107,7 @@
 		<h2 class="about-me__title">A propos de moi</h2>
 		<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
 		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
-			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+			C’est ce que je vous propose : saisir ces merveilleux moments lors de votre mariage, évènements d'entreprise.. au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 	</div>
 		</div>
 		<div id="gallery">
@@ -140,7 +140,7 @@
 		<div class="service">
 			<div class="service__description">
 				<h3>Shooting photo</h3>
-				<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
+				<p>Pour capturer vos moments les plus précieux (portrait de nouveau-né, photo de mariage ...) et garder un souvenir impérissable. Photographe évènementielle à Bordeaux, je me déplace en Île-de-France pour réaliser vos photos</p>
 			</div>
 			<div class="service__price">
 				<h4>350€/demi journée</h4>
