--- a/index.html
+++ b/index.html
@@ -58,73 +58,73 @@
 </head>
 <body>
 	<nav class="top-header">
-	<h1 class="name">Nina Carducci</h1>
-	<div class="nav">   
-		<ul>
-			<li><a href="#about">À propos</a></li>
-			<li><a href="#gallery">Galerie</a></li>
-			<li><a href="#services">Service</a></li>
-			<li><a href="#contact">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" aria-label="instagram de Nina Carducci"><img src="assets/images/instagram.png" alt="logo instagram"></a></li>
-		</ul>
-	</div>
+		<h1 class="name">Nina Carducci</h1>
+		<div class="nav">   
+			<ul>
+				<li><a href="#about">À propos</a></li>
+				<li><a href="#gallery">Galerie</a></li>
+				<li><a href="#services">Service</a></li>
+				<li><a href="#contact">Contact</a></li>
+				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" aria-label="instagram de Nina Carducci"><img src="assets/images/instagram.png" alt="logo instagram"></a></li>
+			</ul>
+		</div>
 	</nav>
 	<header id="header">
 
-	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-		<div class="carousel-indicators">
-			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+			<div class="carousel-indicators">
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			</div>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="./assets/images/slider/compressed_ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme d'affaire marchant sur un sol rayé blanc et noir">
+				</div>
+				<div class="carousel-item">
+					<img src="./assets/images/slider/compressed_nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Foule de jeunes gens en délire">
+				</div>
+				<div class="carousel-item">
+					<img src="./assets/images/slider/compressed_edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Danse d'ouverture de bal d'un mariage où les mariés s'enlassent">
+				</div>
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
 		</div>
-		<div class="carousel-inner">
-			<div class="carousel-item active">
-				<img src="./assets/images/slider/compressed_ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme d'affaire marchant sur un sol rayé blanc et noir">
-			</div>
-			<div class="carousel-item">
-				<img src="./assets/images/slider/compressed_nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Foule de jeunes gens en délire">
-			</div>
-			<div class="carousel-item">
-				<img src="./assets/images/slider/compressed_edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Danse d'ouverture de bal d'un mariage où les mariés s'enlassent">
-			</div>
-		</div>
-		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Previous</span>
-		</button>
-		<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="visually-hidden">Next</span>
-		</button>
-	</div>
 	</header>
 	<main>
 		<div id="about">
-	<div class="picture left">
-		<img src="./assets/images/compressed_nina.webp" alt="Portrait de la photographe Nina Carducci">
-	</div>
-	<div id="about-me">
-		<h2 class="about-me__title">A propos de moi</h2>
-		<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
-		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
+			<div class="picture left">
+			<img src="./assets/images/compressed_nina.webp" alt="Portrait de la photographe Nina Carducci">
+			</div>
+			<div id="about-me">
+				<h2 class="about-me__title">A propos de moi</h2>
+				<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
+				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 			C’est ce que je vous propose : saisir ces merveilleux moments lors de votre mariage, évènements d'entreprise.. au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
-	</div>
+			</div>
 		</div>
 		<div id="gallery">
-	<h2 class="title">Portfolio</h2>
-	<div class="container py-3">
-		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/compressed_aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Public enjoué lors d'un concert aux couleurs flamboyantes"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portait d'un jeune homme habillé d'un costume noir avec cravate rouge qui pose debout"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Deux jeunes femmes souriantes de profil assises à leur bureau"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/compressed_hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Gros plan sur 4 mains qui s'approchent pour se donner la main"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/compressed_ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait d'un trentenaire de couleur noire vêtu d'un t-shirt et colliers argentés fermant les yeux"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/compressed_jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Couple de jeunes mariés souriant avec un immense palmier en arrère-plan"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/compressed_nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait d'une jeune femme de couleur blanche fermant les yeux posant devant un grillage"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/compressed_austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Chanteur sur scène avec de la fumée en arrière-plan de couleur bleue, blanche et rouge"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Jeune femme de couleur blanche,hilare assise devant son ordinateur et regardant à sa gauche "/>
-		</div>
-	</div>
+			<h2 class="title">Portfolio</h2>
+			<div class="container py-3">
+				<div class="gallery" style="display: none">
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/compressed_aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Public enjoué lors d'un concert aux couleurs flamboyantes"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portait d'un jeune homme habillé d'un costume noir avec cravate rouge qui pose debout"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Deux jeunes femmes souriantes de profil assises à leur bureau"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/compressed_hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Gros plan sur 4 mains qui s'approchent pour se donner la main"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/compressed_ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait d'un trentenaire de couleur noire vêtu d'un t-shirt et colliers argentés fermant les yeux"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/compressed_jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Couple de jeunes mariés souriant avec un immense palmier en arrère-plan"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/compressed_nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait d'une jeune femme de couleur blanche fermant les yeux posant devant un grillage"/>
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/compressed_austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Chanteur sur scène avec de la fumée en arrière-plan de couleur bleue, blanche et rouge"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Jeune femme de couleur blanche,hilare assise devant son ordinateur et regardant à sa gauche "/>
+				</div>
+			</div>
 	<div class="quote">
 		<figure>
 			<blockquote>
@@ -135,69 +135,73 @@
 	</div>
 		</div>
 		<div id="services">
-	<h2 class="title">Mes services</h2>
-	<div class="container">
-		<div class="service">
-			<div class="service__description">
-				<h3>Shooting photo</h3>
-				<p>Pour capturer vos moments les plus précieux (portrait de nouveau-né, photo de mariage ...) et garder un souvenir impérissable. Photographe évènementielle à Bordeaux, je me déplace en Île-de-France pour réaliser vos photos</p>
+			<h2 class="title">Mes services</h2>
+			<div class="container">
+				<div class="service">
+					<div class="service__description">
+						<h3>Shooting photo</h3>
+						<p>Pour capturer vos moments les plus précieux (portrait de nouveau-né, photo de mariage ...) et garder un souvenir impérissable. Photographe évènementielle à Bordeaux, je me déplace en Île-de-France pour réaliser vos photos</p>
+					</div>
+					<div class="service__price">
+						<h4>350€/demi journée</h4>
+						<span>Matériel, déplacement inclus</span>
+					</div>
+				</div>
+				<div class="service">
+					<div class="service__description">
+						<h3>Retouches</h3>
+						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
+					</div>
+					<div class="service__price">
+						<h4>50€/photo</h4>
+						<span>2 AR par photo</span>
+					</div>
+				</div>
+				<div class="service">
+					<div class="service__description">
+						<h3>Album photos</h3>
+						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
+					</div>
+					<div class="service__price">
+						<h4>400€ album A4</h4>
+						<span>30 pages recto/verso</span>
+					</div>
+				</div>
 			</div>
-			<div class="service__price">
-				<h4>350€/demi journée</h4>
-				<span>Matériel, déplacement inclus</span>
-			</div>
-
-		</div>
-		<div class="service">
-			<div class="service__description">
-				<h3>Retouches</h3>
-				<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
-			</div>
-			<div class="service__price">
-				<h4>50€/photo</h4>
-				<span>2 AR par photo</span>
-			</div>
-		</div>
-		<div class="service">
-			<div class="service__description">
-				<h3>Album photos</h3>
-				<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
-			</div>
-			<div class="service__price">
-				<h4>400€ album A4</h4>
-				<span>30 pages recto/verso</span>
-			</div>
-		</div>
-	</div>
 		</div>
 		<div class="quote">
-	<figure>
-		<blockquote>
-			<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
-		</blockquote>
-		<figcaption class="quote__author">- Richard Avedon</figcaption>
-	</figure>
+			<figure>
+				<blockquote>
+					<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
+				</blockquote>
+				<figcaption class="quote__author">- Richard Avedon</figcaption>
+			</figure>
+		</div>
+		<div id="contact">
+			<div class="container">
+				<div class="form-container">
+					<h2>Une question ? Une demande de devis ?</h2>
+					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+					<form action="" method="post">
+						<label for="nom">Nom</label>
+						<input type="text" name="nom" id="nom">
+						<label for="email">Email</label>
+						<input type="email" name="email" id="email">
+						<label for="message">Message</label>
+						<textarea name="message" id="message" cols="30" rows="10"></textarea>
+						<input type="submit" value="Envoyer"/>
+					</form>
+				</div>
+				<div class="picture right">
+					<img src="./assets/images/compressed_camera.webp" alt="Appareil photo prise avec une lumière sombre orangée">
+				</div>
+			</div>
 		</div>
 	</main>
-	<footer id="contact">
-	<div class="container">
-		<div class="form-container">
-			<h2>Une question ? Une demande de devis ?</h2>
-			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-			<form action="" method="post">
-				<label for="nom">Nom</label>
-				<input type="text" name="nom" id="nom">
-				<label for="email">Email</label>
-				<input type="email" name="email" id="email">
-				<label for="message">Message</label>
-				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer"/>
-			</form>
-		</div>
-		<div class="picture right">
-			<img src="./assets/images/compressed_camera.webp" alt="Appareil photo prise avec une lumière sombre orangée">
-		</div>
-	</div>
+	<footer>
+		<div>Nina Carducci, 68 Avenue Alsace-Lorraine - 33200 Bordeaux</div>
+		<div>Du lundi au vendredi : 10h - 19h</div>
+		<div>tel: 05.56.67.78.89</div>
 	</footer>
 </body>
 </html>
