modification: ajout .min à bootstrap , ajout des fichiers non minifies, suppression h4 ,modification du curseur, simplification des titres photos et mise en place du lazy loading

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Nina CARDUCCI | Photographe mariage et portrait en IDF</title>
+	<title>Nina CARDUCCI | Photographe mariage et portrait-Bordeaux</title>
 	<meta name="description" content="Photographe professionnelle à Bordeaux, vous propose mes services pour shooting (mariage, portrait...), création d'album personnalisé ou retouche photo.">
 	<meta name="language" content="fr-FR">
 
@@ -19,16 +19,16 @@
 	<meta name="twitter:image" content="./assets/images/compressed_imageOGTC.webp" />
 	<meta name="twitter:url" content="https://nina-carducci.github.io/" />
 
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" defer integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
-	<script src="./assets/maugallery.js" defer></script>
-	<script src="./assets/scripts.js" defer></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
+	<script src="./assets/maugallery.min.js" defer></script>
+	<script src="./assets/scripts.min.js" defer></script>
 	<script type="application/ld+json">
     {
         "@context": "https://schema.org/",
@@ -79,13 +79,13 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/compressed_ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Homme d'affaire marchant sur un sol rayé blanc et noir">
+					<img src="./assets/images/slider/photo-artistique-noir-blanc.webp" class="d-block w-100" alt="Homme d'affaire marchant sur un sol rayé blanc et noir">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/compressed_nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="Foule de jeunes gens en délire">
+					<img src="./assets/images/slider/capture-moment-euphorie-foule.webp" class="d-block w-100" alt="Foule de jeunes gens en délire">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/compressed_edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Danse d'ouverture de bal d'un mariage où les mariés s'enlassent">
+					<img src="./assets/images/slider/danse-mariage.webp" class="d-block w-100" alt="Danse d'ouverture de bal d'un mariage où les mariés s'enlassent">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -101,7 +101,7 @@
 	<main>
 		<div id="about">
 			<div class="picture left">
-			<img src="./assets/images/compressed_nina.webp" alt="Portrait de la photographe Nina Carducci">
+			<img loading="lazy" src="./assets/images/carducci_nina.webp" alt="Portrait de la photographe Nina Carducci">
 			</div>
 			<div id="about-me">
 				<h2 class="about-me__title">A propos de moi</h2>
@@ -114,15 +114,15 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/compressed_aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Public enjoué lors d'un concert aux couleurs flamboyantes"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portait d'un jeune homme habillé d'un costume noir avec cravate rouge qui pose debout"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Deux jeunes femmes souriantes de profil assises à leur bureau"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/compressed_hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Gros plan sur 4 mains qui s'approchent pour se donner la main"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/compressed_ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait d'un trentenaire de couleur noire vêtu d'un t-shirt et colliers argentés fermant les yeux"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/compressed_jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Couple de jeunes mariés souriant avec un immense palmier en arrère-plan"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/compressed_nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait d'une jeune femme de couleur blanche fermant les yeux posant devant un grillage"/>
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/compressed_austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Chanteur sur scène avec de la fumée en arrière-plan de couleur bleue, blanche et rouge"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/compressed_mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Jeune femme de couleur blanche,hilare assise devant son ordinateur et regardant à sa gauche "/>
+					<img data-gallery-tag="Concert" class="gallery-item" loading="lazy" src="./assets/images/gallery/concerts/photo-artistique-spirale-concert.webp" alt="Public enjoué lors d'un concert aux couleurs flamboyantes"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy" src="./assets/images/gallery/entreprise/portrait-jeune-homme-en-costume-cravate.webp" alt="Portait d'un jeune homme habillé d'un costume noir avec cravate rouge qui pose debout"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy" src="./assets/images/gallery/entreprise/moment-de-joie-en-reunion.webp" alt="Deux jeunes femmes souriantes de profil assises à leur bureau"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" loading="lazy" src="./assets/images/gallery/mariage/shooting-mariage-mains-unies.webp" alt="Gros plan sur 4 mains qui s'approchent pour se donner la main"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy" src="./assets/images/gallery/portraits/portrait-homme-emotion.webp" alt="Portrait d'un trentenaire de couleur noire vêtu d'un t-shirt et colliers argentés fermant les yeux"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" loading="lazy" src="./assets/images/gallery/mariage/shooting-jeune-maries.webp" alt="Couple de jeunes mariés souriant avec un immense palmier en arrère-plan"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" loading="lazy" src="./assets/images/gallery/portraits/portrait-femme-emotion.webp" alt="Portrait d'une jeune femme de couleur blanche fermant les yeux posant devant un grillage"/>
+					<img data-gallery-tag="Concert" class="gallery-item" loading="lazy" src="./assets/images/gallery/concerts/gros-plan-chanteur-sur-scene.webp" alt="Chanteur sur scène avec de la fumée en arrière-plan de couleur bleue, blanche et rouge"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" loading="lazy" src="./assets/images/gallery/entreprise/portrait-jeune-femme-au-travail.webp" alt="Jeune femme de couleur blanche,hilare assise devant son ordinateur et regardant à sa gauche "/>
 				</div>
 			</div>
 	<div class="quote">
@@ -143,7 +143,7 @@
 						<p>Pour capturer vos moments les plus précieux (portrait de nouveau-né, photo de mariage ...) et garder un souvenir impérissable. Photographe évènementielle à Bordeaux, je me déplace en Île-de-France pour réaliser vos photos</p>
 					</div>
 					<div class="service__price">
-						<h4>350€/demi journée</h4>
+						<p>350€/demi journée</p>
 						<span>Matériel, déplacement inclus</span>
 					</div>
 				</div>
@@ -153,7 +153,7 @@
 						<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
 					</div>
 					<div class="service__price">
-						<h4>50€/photo</h4>
+						<p>50€/photo</p>
 						<span>2 AR par photo</span>
 					</div>
 				</div>
@@ -163,7 +163,7 @@
 						<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
 					</div>
 					<div class="service__price">
-						<h4>400€ album A4</h4>
+						<p>400€ album A4</p>
 						<span>30 pages recto/verso</span>
 					</div>
 				</div>
@@ -193,7 +193,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/compressed_camera.webp" alt="Appareil photo prise avec une lumière sombre orangée">
+					<img loading="lazy" src="./assets/images/camera.webp" alt="Appareil photo prise avec une lumière sombre orangée">
 				</div>
 			</div>
 		</div>
